* Modified REAMDE * Modified Date Input * Fixed typo in Endpoint Path
